--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -21,9 +21,12 @@ img{
 .clip-path{
     background-color: white;
     clip-path: polygon(0 0, 100% 0, 64% 100%, 0% 100%);
-    width: 300px;
+    width: 40%;
+    max-width: 340px;
     height:130px;
-    padding: 20px 0px 0px 50px
+    padding: 20px 0px 0px 50px;
+    box-shadow: 0 0 10px rgba(39, 39, 39, 0.425);
+    /* margin-bottom: 0.5px; */
 }
 
 #company-name{
