added hover effects to navbar

--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,10 @@ body {
     background-color: #e5f1fa;
     margin: 0;
 }
+
+.zoomEffect{
+    transition: transform 0.3s ease;
+}
+.zoomEffect:hover{
+    transform:scale(1.05);
+}
