--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -21,6 +21,20 @@
     width: 100%;
 }
 
+.selectedTab:hover {
+    background-color: rgb(200, 224, 245);
+}
+
+.non-selectedTab {
+    border-radius: 0px 10px 10px 0px;
+    background-color: rgb(255, 255, 255);
+    width: 100%;
+}
+
+.non-selectedTab:hover {
+    background-color: rgb(200, 224, 245);
+}
+
 .logoutTab {
     background-color: rgb(213, 244, 253);
 }
