--- a/src/components/PortraitCards/portraitCards.css
+++ b/src/components/PortraitCards/portraitCards.css
@@ -6,7 +6,8 @@
 }
 
 .featurePoints {
-    font-size: 14px;
+    font-weight: bold;
+    font-size: 11px;
 
     img {
         margin: 0px 5px;
@@ -19,4 +20,8 @@
 
 .hoverEffect:hover {
     opacity: 100%;
+}
+
+.link {
+    cursor: pointer;
 }
